fixed [new mls]: some components  brand colors and drawingRemoveButtons overflow

--- a/app/styles/components/pages/listings/components/_tabs.scss
+++ b/app/styles/components/pages/listings/components/_tabs.scss
@@ -1,36 +1,33 @@
 .c-listings__tabs {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .c-listings__tabs__item {
-  display: inline-block;
+    display: inline-block;
 }
 
 .c-listings__tabs__link {
-  display: inline-block;
-  padding: 1.5rem 2rem;
-
-  &:hover,
-  &:focus {
-    text-decoration: none;
-
-    > span {
-      color: #333;
+    display: inline-block;
+    padding: 1.5rem 2rem;
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        >span {
+            color: #333;
+        }
     }
-  }
-
-  &--active {
-    > span {
-      font-weight: 600;
-      color: #333 !important;
-      border-bottom: 3px solid #3388ff;
+    &--active {
+        >span {
+            font-weight: 600;
+            color: #333 !important;
+            border-bottom: 3px solid;
+            border-bottom-color: inherit;
+        }
     }
-  }
-
-  > span {
-    padding-bottom: calc(1.5rem - 1px);
-    font-size: 1.7rem;
-    color: #9b9b9b;
-  }
+    >span {
+        padding-bottom: calc(1.5rem - 1px);
+        font-size: 1.7rem;
+        color: #9b9b9b;
+    }
 }
